# sgc

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/scripts/run_clang_format_on_source/: run_clang_format_on_source.go
.github/workflows/: ci.yml
docs/: Doxyfile
src/.cmake/: essential.cmake
src/sgc_lib/: CMakeLists.txt
src/sgc_lib/private/: DebugLogger.hpp  GarbageCollector.cpp  GcAllocation.cpp  GcAllocation.h  GcAllocationColor.hpp  GcAllocationConstructionGuard.cpp  GcAllocationConstructionGuard.h  GcAllocationInfo.hpp  GcContainerBase.cpp  GcContainerBase.h  GcNode.hpp  GcPtr.cpp  GcTypeInfo.cpp  GcTypeInfo.h
src/sgc_lib/public/: GarbageCollector.h  GcInfoCallbacks.hpp  GcPtr.h  GcVector.hpp
src/sgc_lib/public/gccontainers/: GcVector.hpp
src/sgc_tests/: CMakeLists.txt
src/sgc_tests/src/: GcPtrInsideNonGcContainers.cpp  InheritanceTests.cpp  MiscGcPtrTests.cpp  MultithreadingTests.cpp  NodeGraphTests.cpp  ThreadPool.cpp  ThreadPool.h  main.cpp  tests.cpp
src/sgc_tests/src/containers/: VectorTests.cpp
